# BackEndChatbot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FILE_INVENTORY.md  MULTI_AGENT_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yaml  pyproject.toml  setup.bat  setup.py
src/: config.py  dependencies.py  main.py
src/agents/: multi_agent_system.py
src/api/: dtos.py
src/api/controllers/: indexing_controller.py  rag_controller.py
src/domain/: __init__.py  models.py
src/mcp/: __init__.py  mcp_provider.py
src/repositories/: interfaces.py  mock_repositories.py  qdrant_repository.py
src/services/: indexing_service.py  rag_service.py
src/utils/: logging_config.py
tests/: test_rag_service.py
