[project]
name = "backendchatbot"
version = "0.1.0"
description = "Enterprise RAG System with Multi-Agent Architecture using LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # LangChain & LangGraph
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "langsmith>=0.0.77",
    
    # Document Processing (Docling by IBM)
    "docling>=1.0.0",
    "docling-core>=1.0.0",
    
    # Vector Database
    "qdrant-client>=1.7.0",
    
    # Embeddings & LLM
    "openai>=1.10.0",
    "tiktoken>=0.5.2",
    
    # MCP (Model Context Protocol)
    "mcp>=0.1.0",
    
    # Utilities
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    
    # Logging & Monitoring
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

llm-local = [
    "ollama>=0.1.0",
]

all = [
    "backendchatbot[dev,llm-local]",
]
